--- a/practice-story.html
+++ b/practice-story.html
@@ -21,8 +21,8 @@
     Bleacher Report released their rankings for all 30 NBA teams
     </h2>
   
-    <p>
-      By Jeph Duarte <a href="https://twitter.com/jeph_duarte">@jeph_duarte</a> | <span>Aug 5, 2018, 6:00am CDT</span>
+    <p class="byline">
+      By Jeph Duarte <a href="https://twitter.com/jeph_duarte">@jeph_duarte</a> | <span><em>Aug 5, 2018, 6:00am CDT</em></span>
     </p>
     <img src="spurs.jpg" width="620px" alt="Spurs"/>
   
